--- a/Changes
+++ b/Changes
@@ -3,7 +3,8 @@ Revision history for Perl extension Net::MQTT::Simple.
 Incompatible changes are marked with "!!". Incompatibility with and changes in
 "undocumented features" are not always specifically mentioned here.
 
-1.15    
+1.15  Tue May 27 22:35 2014
+        - Bug fix: Client certificates now work.
         - Improvement: pattern tests now includes those from mosquitto.
           (Suggested by karlp in #mqtt)
 
