--- a/Changes
+++ b/Changes
@@ -3,11 +3,16 @@ Revision history for Perl extension Net::MQTT::Simple.
 Incompatible changes are marked with "!!". Incompatibility with and changes in
 "undocumented features" are not always specifically mentioned here.
 
-1.17  Not released yet
+1.21  Sat Jul 18 0:45 2015
+        - New: options --count, --message-only, --one in command line utility
+
+1.20  Thu Feb 5 13:22 2015
         - Bug fix: /# also matched any topic that matches + (tests were wrong)
           (Reported by ral in #mqtt)
+        - Bug fix: Subscription topics weren't UTF8-encoded
         - Improvement: tests for topics "" and "/"
         - Code cleanups
+        - New: Support for unsubscribing
 
 1.16  Fri May 30 23:45 2014
         - Bug fix: Clear buffer on reconnect to avoid garbage.
