--- a/Changes
+++ b/Changes
@@ -3,8 +3,9 @@ Revision history for Perl extension Net::MQTT::Simple.
 Incompatible changes are marked with "!!". Incompatibility with and changes in
 "undocumented features" are not always specifically mentioned here.
 
-1.21  Sat Jul 18 0:45 2015
+1.21  Sat Sep 12 1:32 2015
         - New: options --count, --message-only, --one in command line utility
+        - Bug fix: enable autoflush in utility, for better pipe compatibility
 
 1.20  Thu Feb 5 13:22 2015
         - Bug fix: /# also matched any topic that matches + (tests were wrong)
