--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@ Revision history for Perl extension Net::MQTT::Simple.
 Incompatible changes are marked with "!!". Incompatibility with and changes in
 "undocumented features" are not always specifically mentioned here.
 
+1.23
+        - New: env variables MQTT_SIMPLE_USERNAME and MQTT_SIMPLE_PASSWORD
+    !!  - Now depends on a sane Perl installation with strict and warnings
+
 1.22  2018-12-01 21:01
         - New: username/password authentication (login method)
         - Changelog now uses ISO dates
