--- a/Changes
+++ b/Changes
@@ -5,7 +5,9 @@ Incompatible changes are marked with "!!". Incompatibility with and changes in
 
 1.23
         - New: env variables MQTT_SIMPLE_USERNAME and MQTT_SIMPLE_PASSWORD
+        - New: undocumented global $Net::MQTT::Simple::PROTOCOL_LEVEL
     !!  - Now depends on a sane Perl installation with strict and warnings
+    !!  - Default protocol version is now 3.1.1 (unlikely to break anything)
 
 1.22  2018-12-01 21:01
         - New: username/password authentication (login method)
