--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Incompatible changes are marked with "!!". Incompatibility with and changes in
 "undocumented features" are not always specifically mentioned here.
 
 1.24  2019-07-22 16:47
+        - Fix: Unsubscribe didn't work with newer mosquitto.
         - Fix: The procedural interface broke in 1.23 (use strict related).
         - Change: retroactively updated changelog; the apparent bug in
           Mosquitto was actually a bug fix, triggering a bug in
